Lista de ingredientes

--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
         <figure class="main__img">
           <img src="assets/imgs/photo1.png" alt="recipe" />
         </figure>
-        <div class="main__data">
+      </section>
+      <section class="recipe">
+        <div class="recipe__data">
           <div>
             <div class="data data--yields">
               <span class="material-icons-outlined">restaurant_menu </span>
@@ -76,6 +78,82 @@
             <div></div>
           </div>
         </div>
+        <section class="recipe__description">
+          <section class="recipe__ingredients">
+            <h2>Ingredients</h2>
+            <div>
+              <h3>Graham Cracker Crust</h3>
+              <ul>
+                <li>
+                  <input type="checkbox" />
+                  <label>
+                    1 and 1/2 cups (150g) <b>graham cracker crumbs</b> (about 10
+                    full sheet graham crackers)
+                  </label>
+                </li>
+                <li>
+                  <input type="checkbox" />
+                  <label>
+                    5 Tablespoons (70g) <b>unsalted butter</b>, melted
+                  </label>
+                </li>
+                <li>
+                  <input type="checkbox" />
+                  <label>1/4 cup (50g) <b>granulated sugar</b></label>
+                </li>
+              </ul>
+            </div>
+            <div>
+              <h3>Cheesecake</h3>
+              <ul>
+                <li>
+                  <input type="checkbox" />
+                  <label>
+                    four 8-ounce blocks (904g) full-fat <b>cream cheese</b>,
+                    softened to room temperature
+                  </label>
+                </li>
+                <li>
+                  <input type="checkbox" />
+                  <label>1 cup (200g) <b>granulated sugar</b></label>
+                </li>
+                <li>
+                  <input type="checkbox" />
+                  <label>
+                    1 cup (240g) full-fat <b>sour cream</b>, at room temperature
+                  </label>
+                </li>
+                <li>
+                  <input type="checkbox" />
+                  <label>1 teaspoon <b>pure vanilla extract</b></label>
+                </li>
+                <li>
+                  <input type="checkbox" />
+                  <label>
+                    2 teaspoons <b>fresh lemon juice</b> (optional, but
+                    recommended)
+                  </label>
+                </li>
+                <li>
+                  <input type="checkbox" />
+                  <label>3 large <b>eggs</b>, at room temperature</label>
+                </li>
+                <li>
+                  <input type="checkbox" />
+                  <label>
+                    topping suggestions:
+                    <span
+                      >salted caramel, lemon curd, strawberry topping, chocolate
+                      ganache, red wine chocolate ganache, fresh fruit, whipped
+                      cream, or raspberry sauce
+                    </span>
+                    (recipe in notes)
+                  </label>
+                </li>
+              </ul>
+            </div>
+          </section>
+        </section>
       </section>
     </main>
   </body>
